# Hydra

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: golden_sample.jsonl
src/hydra/: __init__.py  cli.py  config.py  graph.py  llm.py  sample_data.py  state.py
src/hydra/eval/: __init__.py  cli.py  dataset.py  metrics.py  report.py  runner.py
src/hydra/nodes/: __init__.py  crag.py  downstream.py  generate.py  pageindex.py  pot.py  router.py  transform.py
src/hydra/pageindex/: __init__.py  build.py  parse.py  search.py  tree.py
src/hydra/retrieval/: __init__.py  dense.py  documents.py  embeddings.py  fusion.py  pipeline.py  rerank.py  sparse.py  text.py
tests/: test_crag.py  test_doc_votes.py  test_eval.py  test_generation.py  test_graph.py  test_graph_pageindex.py  test_graph_phase2.py  test_pageindex_build.py  test_pageindex_parse.py  test_pageindex_search.py  test_pageindex_tree.py  test_pipeline.py  test_retrieval_components.py  test_router.py  test_transform.py
