[project]
name = "hydra-rag"
version = "0.1.0"
description = "Hydra — Hybrid Adaptive RAG (vector + vectorless) orchestrated with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Real LLM provider(s). The core graph runs offline with the bundled demo LLM,
# so these stay optional until a provider is chosen (see plan §8 decision #2).
openai = ["openai>=1.30"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
hydra = "hydra.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hydra"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
