[project]
name = "hydra-rag"
version = "0.1.0"
description = "Hydra — Hybrid Adaptive RAG (vector + vectorless) orchestrated with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "python-dotenv>=1.0",
    "qdrant-client>=1.7",  # dense HNSW store; local in-memory mode needs no server
]

[project.optional-dependencies]
# Real LLM provider(s). The core graph runs offline with the bundled demo LLM,
# so these stay optional until a provider is chosen (see plan §8 decision #2).
openai = ["openai>=1.30"]
# Production cross-encoder reranker (heavy: pulls torch). Offline default is the
# lightweight LexicalReranker; enable this for the directive-mandated cross-encoder.
rerank = ["sentence-transformers>=2.2"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
hydra = "hydra.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hydra"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
